--- a/Floor2.xaml
+++ b/Floor2.xaml
@@ -107,10 +107,10 @@
                         </MenuItem.Icon>
                     </MenuItem>
 
-                    <MenuItem Margin="1,398,-1,-460" FontSize="40" FontWeight="Bold" Click="floor2_btn">
+                    <MenuItem Margin="1,398,-1,-460" FontSize="40" FontWeight="Bold" Background="#FF0B5793">
                         <MenuItem.Header>
                             <Grid>
-                                <TextBlock Text="2nd Floor" Margin="85,0,-86,0"/>
+                                <TextBlock Text="2nd Floor" Margin="85,0,-86,0" Foreground="White"/>
                             </Grid>
                         </MenuItem.Header>
 
