--- a/Mezzanine.xaml
+++ b/Mezzanine.xaml
@@ -93,10 +93,10 @@
                         </MenuItem.Icon>
                     </MenuItem>
 
-                    <MenuItem Margin="0,317,0,-379" FontSize="40" FontWeight="Bold" Click="mezzanine_btn">
+                    <MenuItem Margin="0,317,0,-379" FontSize="40" FontWeight="Bold" Background="#FF0B5793">
                         <MenuItem.Header>
                             <Grid>
-                                <TextBlock Text="Mezzanine" Margin="85,0,-86,0"/>
+                                <TextBlock Text="Mezzanine" Margin="85,0,-86,0" Foreground="White"/>
                             </Grid>
                         </MenuItem.Header>
 
