--- a/room301.xaml
+++ b/room301.xaml
@@ -5,11 +5,40 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:STI_ONN"
         mc:Ignorable="d"
-        Title="room301" Height="450" Width="800"
-        WindowState="Maximized"
-        WindowStyle="None">
-    <Grid>
-        <DataGrid x:Name="excelDataGrid" AutoGenerateColumns="True" />
-        <Button Content="Close" Click="CloseButton_Click" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,380,25,0" Height="44" Width="72" FontSize="18" FontFamily="Arial" FontWeight="Bold"/>
+        Title="room301" Height="465" Width="809"
+        WindowStyle="None"
+        WindowStartupLocation="CenterScreen"
+        ResizeMode="NoResize">
+
+    <Grid Background="#FFEAF2FF">
+        <DataGrid x:Name="excelDataGrid" AutoGenerateColumns="True" Margin="49,51,49,51" HeadersVisibility="None" Width="710.8">
+            <DataGrid.CellStyle>
+                <Style TargetType="DataGridCell">
+                    <Setter Property="Background" Value="#FFF2CC"/>
+                    <Setter Property="Foreground" Value="Black"/>
+                    <!-- Default text color -->
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding RelativeSource={RelativeSource Self}, Path=Column.DisplayIndex}" Value="0">
+                            <Setter Property="Background" Value="#305496"/>
+                            <Setter Property="Foreground" Value="White"/>
+                            <!-- Change text color to white for cells in the first column -->
+                        </DataTrigger>
+                        <DataTrigger Binding="{Binding RelativeSource={RelativeSource Self}, Path=Row.DisplayIndex}" Value="0">
+                            <Setter Property="Background" Value="#305496"/>
+                            <Setter Property="Foreground" Value="White"/>
+                            <!-- Change text color to white for cells in the first row -->
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </DataGrid.CellStyle>
+        </DataGrid>
+        <Button Content="Close" Click="CloseButton_Click" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,414,19,0" Height="44" Width="72" FontSize="18" FontFamily="Arial" FontWeight="Bold" BorderBrush="{x:Null}" Background="#FF305496" Foreground="White">
+        <Button.Resources>
+            <Style TargetType="{x:Type Border}">
+                <Setter Property="CornerRadius" Value="20"/>
+            </Style>
+        </Button.Resources>
+        </Button>
+        <Label Content="Room 301 Schedules" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" FontSize="20" FontWeight="Bold" FontFamily="Arial"/>
     </Grid>
 </Window>
